# BRP_ProstateTemplateBiopsy

./: CMakeLists.txt  Prostate Templay Biopsy.bat  README.md
ProstateTemplateBiopsy/: CMakeLists.txt  ProstateTemplateBiopsy.py
ProstateTemplateBiopsy/Resources/: Defaults.ini
ProstateTemplateBiopsy/Resources/Templates/template001/: template001-GuideHoleLabels.vtk  template001-GuideHoles.vtk  template001.vtk  zframe001.txt
ProstateTemplateBiopsy/Resources/Templates/template002/: template002-Calibrator.vtk  template002-GuideHoleLabels.vtk  zframe002.txt  zframe003.txt
ProstateTemplateBiopsy/Resources/Templates/template003/: zframe003.txt
ProstateTemplateBiopsy/Resources/Templates/template004/: template004-Calibrator.vtk  template004-GuideHoleLabels.vtk  zframe004.txt
ProstateTemplateBiopsy/Resources/Templates/template005/: template005-GuideHoleLabels.vtk  zframe005-model.vtk  zframe005.txt
ProstateTemplateBiopsy/Resources/zframe/: zframe004-model.stl  zframe004-model.vtk  zframe004.txt
